# comms-playground

./: RISE.py
central_interface/: CMakeLists.txt  package.xml
central_interface/src/: central_interface.cpp
masnrd_msgs/msg/: Detected.msg  GotoWaypoint.msg  ReachedWaypoint.msg
pymavlink/: boilerplate.py  mission_go_brr.py
ros2_offboard/: CMakeLists.txt  package.xml
ros2_offboard/src/: offboard_control.cpp
